# Multithreaded-Arithmetic

./: CMakeLists.txt  FileTask.cpp  FileTask.h  Logger.cpp  Logger.h  LoggerAndFileTask.h  Operation.cpp  Operation.h  OperationFactory.cpp  Operations.h  TaskProcessor.cpp  TaskProcessor.h  main.cpp  test.cpp
data/: in_1.txt  in_10.txt  in_11.txt  in_12.txt  in_13.txt  in_14.txt  in_15.txt  in_16.txt  in_17.txt  in_18.txt  in_19.txt  in_2.txt  in_20.txt  in_21.txt  in_22.txt  in_23.txt  in_24.txt  in_25.txt  in_26.txt  in_27.txt  in_28.txt  in_29.txt  in_3.txt  in_30.txt  in_31.txt  in_32.txt  in_33.txt  in_34.txt  in_35.txt  in_36.txt  in_37.txt  in_38.txt  in_39.txt  in_4.txt  in_40.txt  in_41.txt  in_42.txt  in_43.txt  in_44.txt  in_45.txt  (+10 more)
